Trying to fix nav menu on mobile (bottom was hidden by the browser menu) x2

--- a/src/common/components/PagePreview/PagePreview.module.css
+++ b/src/common/components/PagePreview/PagePreview.module.css
@@ -22,7 +22,7 @@
 }
 
 .titleDrawing {
-    width: min(100%, 280px);
+    width: min(100%, 350px);
 }
 
 .contentContainer {
